# agentic-researcher-api

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
agent/: calls_schema.py  state.py  tools.py  workflow.py
api/: router.py
api/endpoints/: health.py  hello.py  research.py
core/: config.py
data/: prompts.py
schema/: hello.py  research.py  responses.py
services/: agent.py  core_api_service.py
utils/: helpers.py  logger.py
