[tool.poetry]
name = "agentic-researcher"
version = "0.1.0"
description = ""
authors = ["Andrew Sameh <g.andrewsameh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.2.16"
langchain-community = "0.2.16"
langchain-openai = "0.1.23"
langgraph = "0.2.18"
langsmith = "0.1.114"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"
pydantic = "2.10.6"
pydantic-settings = "^2.7.1"
# ToDo: Add uvloop for faster asyncio for Unix systems
# uvloop = "^0.21.0"
httpx = "^0.28.1"
pytest = "^8.3.4"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
structlog = "^25.1.0"
asgi-correlation-id = "^4.3.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
